--- a/styles.css
+++ b/styles.css
@@ -173,12 +173,13 @@ h1{
     display: flex;
     justify-content: space-between;
     gap: 10px 20px;
+    width: 50%;
 }
 
 .parameter{
     margin-top: 2rem;
-    width: 30%;
-    max-width: 200px;
+    /* width: 90%; */
+    width: 400px;
     background-color: rgba(255, 255, 255, 0.488);
     border-radius: 5px;
     padding: 1rem;
@@ -186,6 +187,18 @@ h1{
     flex-direction: column;
     gap: 5px 0;
     align-items: center;
+    justify-content: space-between;
+}
+
+.parameter img{
+    height: 100px;
+    width: 100px;
+}
+
+.parameter p{
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
 }
 
 /* -------SEARCH WEATHER----- */
@@ -198,8 +211,6 @@ h1{
     align-items: center;
     gap: 0 10px;
     margin-bottom: 3rem;
-    /* display: flex;  */
-    /* ----display ko hatana */
 }
 .form-container.active{
     display: flex;
